# IVoice_client_qt

./: .gitignore  CMakeLists.txt  readme.md  resources.qrc
config/: config.ini
docs/: Doxyfile
docs/html/: annotated.html  annotated_dup.js  basewidget_8h.html  basewidget_8h.js  basewidget_8h_source.html  class_base_dialog-members.html  class_base_dialog.html  class_base_dialog.js  class_base_widget-members.html  class_base_widget.html  class_base_widget.js  class_lib_core_1_1_logger-members.html  class_lib_core_1_1_logger.html  class_lib_core_1_1_logger.js  class_lib_core_1_1_server-members.html  class_lib_core_1_1_server.html  class_lib_core_1_1_server.js  class_lib_core_1_1_settings-members.html  class_lib_core_1_1_settings.html  class_lib_core_1_1_settings.js  class_lib_core_1_1_user-members.html  class_lib_core_1_1_user.html  class_lib_core_1_1_user.js  class_login_window-members.html  class_login_window.html  class_login_window.js  class_main_window-members.html  class_main_window.html  class_register_window-members.html  class_register_window.html  class_register_window.js  class_server_bar-members.html  class_server_bar.html  class_server_bar.js  class_settings_account_widget-members.html  class_settings_account_widget.html  class_settings_account_widget.js  class_settings_appearance_widget-members.html  class_settings_appearance_widget.html  class_settings_appearance_widget.js  (+45 more)
docs/html/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_4.js  classes_6.js  defines_0.js  enums_0.js  files_0.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js
include/: basewidget.h  core.h  loginwindow.h  mainwindow.h  registerwindow.h  serverbar.h  settingswidget.h  sidebar.h  widgets.h  workspace.h
resources/styles/: styles.qss
src/: main.cpp
src/core/: CMakeLists.txt  logger.cpp  server.cpp  settings.cpp  user.cpp
src/gui/: CMakeLists.txt  basewidget.cpp  loginwindow.cpp  main.cpp  mainwindow.cpp  registerwindow.cpp  serverbar.cpp  settingswidget.cpp  sidebar.cpp  workspace.cpp
